# nttec-tools

./: CMakeLists.txt  README.md
cmake/modules/: FindGMP.cmake  FindGMPXX.cmake
src/: CMakeLists.txt  find_pminus1_compo.cpp  find_primes.cpp  is_prime.cpp  quadiron_tools.h
